# aicw

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml
programs/aicw/: Cargo.toml
programs/aicw/src/: errors.rs  events.rs  lib.rs
programs/aicw/src/instructions/: ai_decide.rs  ai_transfer.rs  ai_will.rs  issue_wallet.rs  mod.rs  register_identity.rs
programs/aicw/src/state/: ai_identity.rs  ai_will.rs  aicw_wallet.rs  decision_log.rs  mod.rs
tests/: aicw.ts
